# visual-watch

./: .gitignore  2024-12-08T07-09_export.csv  dashboard.py  hindi_list.csv  hot_list.csv  pyproject.toml  scrape_spider.csv  sorting_spider.csv
utils/: computes.py  data.py  misc.py
