[tool.poetry]
name = "visual-watch"
version = "0.1.0"
description = ""
authors = ["Rohit <RohitSinghEmail@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
pycountry = "^24.6.1"
plotly = "^5.24.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
